# Python8-Entornos-virtuales

ex0/: construct.py
ex1/: loading.py  pyproject.toml  requirements.txt
ex2/: .env  .env.example  oracle.py
